--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 CONNECTION_STRING="mongodb+srv://ingweb:ingweb@clusteringweb.ojhyruz.mongodb.net/?retryWrites=true&w=majority"
 PORT="5000"
+
+API_KEY="559387967576158"
+API_SECRET="pJqb5o42C5YwbTEgLZARQi4Jl-4"
+CLOUD_NAME="ddulholn3"
+UPLOAD_PRESET_UNSIGNED="preset_elrastro"
+UPLOAD_PRESET_SIGNED="ml_default"
+
+GOOGLE_CLIENT_ID="103009627553-g0gfh9bpp723qg23b9ppc4rsolgv9m5b.apps.googleusercontent.com"
