--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Jorge Camacho",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.1",
+    "axios": "^1.6.2",
+    "cloudinary": "^1.41.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.2.0"
+    "mongodb": "^6.2.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
