--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ UPLOAD_PRESET_UNSIGNED="preset_elrastro"
 UPLOAD_PRESET_SIGNED="ml_default"
 
 GOOGLE_CLIENT_ID="103009627553-g0gfh9bpp723qg23b9ppc4rsolgv9m5b.apps.googleusercontent.com"
-CLIENTS="https://backend-rho-eosin-74.vercel.app/"
+CLIENTS="https://backend-rho-eosin-74.vercel.app"
